test/good/dictionaries/dict03.px

d = {
    "?": [{6, 8}],
    '.': [{4}],
    "": [],
}
print d["."], d[""]
print d['?'][0].length
