test/bad/dictionaries/dict07.px

s = {0}
d = {"": s, "": {0.0}, "": {}}
